try to fix visibility of video on ios

--- a/scss/media.scss
+++ b/scss/media.scss
@@ -225,6 +225,7 @@
 
 		.c-connection-video {
 			opacity: 1 !important;
+			visibility: visible !important;
 			animation: unset !important;
 			animation-fill-mode: unset !important;
 			top: 60px;
